--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "babel-preset-env": "0.0.9",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
-    "debug": "^2.2.0",
-    "react-hot-loader": "^3.0.0-beta.6"
+    "debug": "^2.2.0"
   },
   "devDependencies": {
-    "@porch/eslint-config-porch": "^8.0.2",
-    "eslint": "^3.8.1"
+    "@porch/eslint-config-porch": "^9.1.4",
+    "eslint": "^4.18.1"
   }
 }
